--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -53,15 +53,14 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
-\name{Claud D.}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Igor}{Grigorev}
+\position{Data scientist{\enskip\cdotp\enskip}Python developer}
+\address{Moscow, Russia}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{(+7)9152886442}
+\email{barsic1080@gmail.com}
+\linkedin{igor-grigorev-51a821187}
+\github{bluella}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -73,7 +72,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+\quote{``physicist => quantitative researcher => data scientist"}
 
 
 %-------------------------------------------------------------------------------
@@ -87,7 +86,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Curriculum Vitae}
+  {Igor Grigorev~~~·~~~Curriculum Vitae}
   {\thepage}
 
 
@@ -100,9 +99,10 @@
 \input{cv/experience.tex}
 \input{cv/extracurricular.tex}
 \input{cv/honors.tex}
-\input{cv/presentation.tex}
-\input{cv/writing.tex}
-\input{cv/committees.tex}
+\input{cv/certificates.tex}
+% \input{cv/presentation.tex}
+% \input{cv/writing.tex}
+% \input{cv/committees.tex}
 
 
 %-------------------------------------------------------------------------------
