--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -11,13 +11,16 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {Specialist's Degree in physics} % Degree
+    {Lomonosov Moscow State University (MSU)} % Institution
+    {Moscow, Russian Federation} % Location
+    {September. 2010 - January. 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {I graduated from Department of Molecular Processes and 
+        Extreme States of Matter in 2016 with a Specialist's degree (5.5 years).}
+        \item {Than i was Ph.D. student for one year. As a researcher I was 
+        conducting experiments to get insights on water structure.}
       \end{cvitems}
     }
 
