--- a/examples/cv/honors.tex
+++ b/examples/cv/honors.tex
@@ -7,7 +7,6 @@
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsubsection{International}
 
 
 %-------------------------------------------------------------------------------
@@ -17,116 +16,87 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {Finalist} % Award
-    {DEFCON 26th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2018} % Date(s)
+    {Top producer award} % Award
+    {Consultant who achieves the maximum total positive PNL in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Feb. 2019} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {Finalist} % Award
-    {DEFCON 25th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2017} % Date(s)
+    {Top score award} % Award
+    {Consultant who achieved the maximum average actual weight per day in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Jan. 2019} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {Finalist} % Award
-    {DEFCON 22nd CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2014} % Date(s)
+    {Top producer award} % Award
+    {Consultant who achieves the maximum total positive PNL in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Jul. 2018} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {Finalist} % Award
-    {DEFCON 21st CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2013} % Date(s)
+    {Top score award} % Award
+    {Consultant who achieved the maximum average actual weight per day in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Jun. 2018} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {Finalist} % Award
-    {DEFCON 19th CTF Hacking Competition World Final} % Event
-    {Las Vegas, U.S.A} % Location
-    {2011} % Date(s)
+    {Top producer award} % Award
+    {Consultant who achieves the maximum total positive PNL in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Nov. 2017} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {6th Place} % Award
-    {SECUINSIDE Hacking Competition World Final} % Event
-    {Seoul, S.Korea} % Location
-    {2012} % Date(s)
+    {Top score award} % Award
+    {Consultant who achieved the maximum average actual weight per day in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Nov. 2017} % Date(s)
 
-%---------------------------------------------------------
-\end{cvhonors}
-
-
-%-------------------------------------------------------------------------------
-%	SUBSECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsubsection{Domestic}
-
-
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
-\begin{cvhonors}
-
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {3rd Place} % Award
-    {WITHCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2015} % Date(s)
+    {Top innovator award} % Award
+    {The consultant with an alpha in OS with the lowest correlation to alphas in the pool will be recognized.} % Event
+    {Worldquant, LLC} % Location
+    {Apr. 2017} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {Silver Prize} % Award
-    {KISA HDCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2017} % Date(s)
+    {Top score award} % Award
+    {Consultant who achieved the maximum average actual weight per day in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Apr. 2017} % Date(s)
 
-%---------------------------------------------------------
-  \cvhonor
-    {Silver Prize} % Award
-    {KISA HDCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2013} % Date(s)
+   %---------------------------------------------------------
+   \cvhonor
+    {Top producer award} % Award
+    {Consultant who achieves the maximum total positive PNL in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Apr. 2017} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {2nd Award} % Award
-    {HUST Hacking Festival} % Event
-    {S.Korea} % Location
-    {2013} % Date(s)
+    {Top producer award} % Award
+    {Consultant who achieves the maximum total positive PNL in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Sep. 2016} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {3rd Award} % Award
-    {HUST Hacking Festival} % Event
-    {S.Korea} % Location
-    {2010} % Date(s)
+    {Top score award} % Award
+    {Consultant who achieved the maximum average actual weight per day in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Sep. 2016} % Date(s)
 
-%---------------------------------------------------------
+  %---------------------------------------------------------
   \cvhonor
-    {3rd Award} % Award
-    {Holyshield 3rd Hacking Festival} % Event
-    {S.Korea} % Location
-    {2012} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {2nd Award} % Award
-    {Holyshield 3rd Hacking Festival} % Event
-    {S.Korea} % Location
-    {2011} % Date(s)
-
-%---------------------------------------------------------
-  \cvhonor
-    {5th Place} % Award
-    {PADOCON Hacking Competition Final} % Event
-    {Seoul, S.Korea} % Location
-    {2011} % Date(s)
+    {Top producer award} % Award
+    {Consultant who achieves the maximum total positive PNL in the last month.} % Event
+    {Worldquant, LLC} % Location
+    {Feb. 2016} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
