--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -11,28 +11,23 @@
 
 %---------------------------------------------------------
   \cvskill
-    {DevOps} % Category
-    {AWS, Docker, Kubernetes, Rancher, Vagrant, Packer, Terraform, Jenkins, CircleCI} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Back-end} % Category
-    {Koa, Express, Django, REST API} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Hugo, Redux, React, HTML5, LESS, SASS} % Skills
-
-%---------------------------------------------------------
-  \cvskill
     {Programming} % Category
-    {Node.js, Python, JAVA, OCaml, LaTeX} % Skills
+    {Python, NodeJS, SQL, LaTeX, C++, Matlab} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Machine Learning} % Category
+    {sklearn, nltk, tensorflow} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {DevOps} % Category
+    {Docker, Postgres, Kubernetes} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Korean, English, Japanese} % Skills
+    {Russian, English} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
