--- a/examples/cv/certificates.tex
+++ b/examples/cv/certificates.tex
@@ -16,6 +16,13 @@
 
 %---------------------------------------------------------
   \cvhonor
+    {Coursera/deeplearning.ai} % Award
+    {Deep Learning Specialization} % Event
+    {\href{https://www.coursera.org/account/accomplishments/specialization/LXGTFW8N6B9W}{link}} % Location
+    {Jul. 2019} % Date(s)
+
+%---------------------------------------------------------
+  \cvhonor
     {Coursera/University of Michigan} % Award
     {Statistics with Python Specialization} % Event
     {\href{https://www.coursera.org/account/accomplishments/specialization/W952YECLMS2T}{link}} % Location
@@ -26,7 +33,7 @@
     {Coursera/IBM} % Award
     {IBM Data Science Professional Certificate Specialization} % Event
     {\href{https://www.coursera.org/account/accomplishments/specialization/BH2XN4WKF7ZP}{link}} % Location
-    {Jul. 2019} % Date(s)
+    {Jun. 2019} % Date(s)
 
 %---------------------------------------------------------
 \end{cvhonors}
