Updated job experience

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -3,18 +3,34 @@
 %-------------------------------------------------------------------------------
 \cvsection{Experience}
 
-
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
 %---------------------------------------------------------
+\cventry
+{Data Analyst} % Job title
+{Zavient} % Organization
+{Moscow, Russian Federation} % Location
+{October 2019 - December 2019} % Date(s)
+{
+  \begin{cvitems} % Description(s) of tasks/responsibilities
+    \item {SEM. Managing/optimizing Google Ads, Bing Ads accounts.}
+    \item {Creation of an automatic bid adjustment strategies based on the statistical arbitrage concept. (via Google Ads scripts embedded into accounts)}
+    \item {Hypothesis testing of the Keywords distributions based on historical data (sample: https://github.com/bluella/keywords-distribution-analysis)}
+    \item {Automation of Negative Keywords generation via Query Reports analysis}
+    \item {Bulk modifications of Ads, Campaigns via scripts.}
+  \end{cvitems}
+}
+
+
+%---------------------------------------------------------
   \cventry
     {Research Consultant} % Job title
     {WorldQuant} % Organization
     {Moscow, Russian Federation} % Location
-    {April 2015 - Present} % Date(s)
+    {April 2015 - September 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Developing financial market signals.}
