--- a/examples/cv/certificates.tex
+++ b/examples/cv/certificates.tex
@@ -7,12 +7,19 @@
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsubsection{Full list at \href{https://www.linkedin.com/in/igor-grigorev-51a821187/}{linkedin}}
+\cvsubsection{Explore full list at \href{https://www.linkedin.com/in/igor-grigorev-51a821187/}{linkedin}}
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvhonors}
+
+%---------------------------------------------------------
+  \cvhonor
+    {Coursera/Google Cloud} % Award
+    {Data Engineering, Big Data, and Machine Learning on GCP} % Event
+    {\href{https://www.coursera.org/account/accomplishments/specialization/certificate/S6EETMYXVHTH}{link}} % Location
+    {Apr. 2020} % Date(s)
 
 %---------------------------------------------------------
   \cvhonor
